aktuális árak almenü elkészítése a 4. feladathoz